# linestickers-to-telegram

./: README.md  pyproject.toml  stickers.json
import_telegram_stickers/: main.py  variables.py
tests/: test_import_telegram_stickers.py
